chore: temporarily run the -alpha image for gecko-1/decision pool
This is primarily to help verify [the new SIGTERM handling](https://github.com/taskcluster/taskcluster/pull/8293) before we roll it out more widespread.

I also want to get some data out of https://github.com/mozilla-platform-ops/worker-images/pull/726, and possibly even revert that and rebuild before we move the main headless image forward.

--- a/worker-pools.yml
+++ b/worker-pools.yml
@@ -1462,7 +1462,10 @@ pools:
         chain-of-trust: trusted
     config:
       implementation: generic-worker/linux-d2g-{chain-of-trust}
-      image: ubuntu-2404-headless
+      image:
+        by-pool-group:
+          gecko-1: ubuntu-2404-headless-alpha
+          default: ubuntu-2404-headless
       minCapacity:
         by-pool-group:
           gecko-1: 5
